@@ -3,6 +3,9 @@
 	* cimXmlRequest.c:
 	Fixed 1879334: Memory leaks in cimXmlRequest.c (patch by Tim Potter)
 
+	* brokerUpc:
+	Fixed 1879454: Memory leaks in brokerUpc.c (patch by Tim Potter)
+	
 2008-01-29 Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* cimXmlGen.c, cimcClientSfcbLocal.c, classProvider.c, 
